<?xml version="1.0"?>
<package format="2">
  <name>flie_swarm_core</name>
  <version>0.0.0</version>
  <description>flie_swarm_core</description>

  <maintainer email="dmihovch@udel.edu">Dan Mihovch</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  
  <build_depend>roscpp</build_depend>
  <build_depend>dji_osdk_ros</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>dji_osdk_ros</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>dji_osdk_ros</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

</package>
